Fixed Previous Flickering Bug

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -434,6 +434,11 @@ body.stowed {
     height: 40vh;
 }
 
+#ui-dialog button {
+    /* This stops the flickering when appending HTML to anything inside a Dialog. */
+    transition-duration: initial;
+}
+
 /**
  *    ###     ######   ######   #######  ########  ########  ####  #######  ##    ## 
  *   ## ##   ##    ## ##    ## ##     ## ##     ## ##     ##  ##  ##     ## ###   ## 
